--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 28
     defaultConfig {
-        applicationId "example.wifidirect"
-        minSdkVersion 15
-        targetSdkVersion 25
+        applicationId "anuj.wifidirect"
+        minSdkVersion 26
+        targetSdkVersion 28
         versionCode 2
         versionName "1.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -29,18 +29,15 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //noinspection GradleCompatible
-    implementation 'com.android.support:multidex:1.0.1'
-    implementation 'com.android.support:appcompat-v7:25.3.1'
-    implementation 'com.android.support:design:25.3.1'
-    implementation 'com.android.support:cardview-v7:25.3.1'
-    implementation 'com.android.support:recyclerview-v7:25.3.1'
-    implementation 'com.android.support:support-v4:25.3.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
 
-    implementation 'com.google.android.gms:play-services:11.0.0'
-    implementation 'com.google.firebase:firebase-core:11.0.0'
-    implementation 'com.kbeanie:multipicker:1.1.31@aar'
+    implementation 'com.kbeanie:multipicker:1.6@aar'
 }
-apply plugin: 'com.google.gms.google-services'
 
